--- a/Vakiorivi-free.ipynb
+++ b/Vakiorivi-free.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "62081c07",
+   "execution_count": 2,
+   "id": "59705ea2",
    "metadata": {},
    "outputs": [
     {
@@ -12,66 +12,82 @@
      "text": [
       "\n",
       "\n",
-      "        Lauantaivakio 1 KRS 20     1/8\n",
+      "            Vakio 1 KRS 21         1/6\n",
       " POTTI: n. 130 000 e.\n",
       " \n",
-      " Pelijakauma 16.28, vaihto 386545 e\n",
+      " Pelijakauma 18.28, vaihto 396843 e\n",
       "                                 1  X  2\n",
-      " 1. Liverpool   - Aston V     M 76 15  9\n",
-      " 2. Bournem.    - Man Utd     M 11 15 74\n",
-      " 3. Wolves      - Everton     M 34 28 38\n",
+      " 1. Brentford   - Man City    M 24 23 54\n",
+      " 2. Arsenal     - Wolves      M 79 13  8\n",
+      " 3. Chelsea     - Newcastle   M 28 27 45\n",
       " ---------------------------------------\n",
-      " 4. Fulham      - Crystal P   M 51 27 23\n",
-      " 5. Nottingha   - Arsenal     M 16 19 65\n",
-      " 6. Bayern M    - RBLeipzig   M 73 17 10\n",
+      " 4. Man Utd     - Fulham      M 77 14  9\n",
+      " 5. Southampt   - Liverpool   M 11 14 76\n",
+      " 6. Aston V     - Brighton    M 50 26 24\n",
       " ---------------------------------------\n",
-      " 7. Hoffenh.    - Union Ber   M 31 26 43\n",
-      " 8. Werder B    - FC Köln       38 28 34\n",
-      " 9. Schalke     - Frankfurt     38 23 39\n",
+      " 7. Leeds U     - Tottenham   M 36 22 42\n",
+      " 8. Crystal P   - Nottingha     63 22 15\n",
+      " 9. Everton     - Bournem.      66 19 15\n",
       " ---------------------------------------\n",
-      "10. Hertha      - Bochum        41 26 33\n",
-      "11. Athletic    - Celta         71 18 11\n",
-      "12. Almeria     - Mallorca      50 26 23\n",
-      "13. Barcelona   - RSociedad     65 21 15\n",
+      "10. Leicester   - West Ham      53 21 26\n",
+      "11. Rayo        - Villarrea     23 24 53\n",
+      "12. Getafe      - Osasuna       49 28 24\n",
+      "13. Girona      - Betis         46 29 26\n",
       " \n",
       "             KOHDE SULJETTU\n",
       " \n",
       "\n",
       "\n",
+      "Rivihintaa ei löytynyt, määritä rivihinta käsin (esim. 0.25): 2\n",
       "Vakion kohdemäärä 13\n",
-      "Täysin vaihdellut: 4\n",
-      "Osittain vaihdellut: 4\n",
-      "[['1' ' ' ' ']\n",
-      " [' ' 'x' ' ']\n",
-      " ['1' 'x' '2']\n",
-      " [' ' 'x' '2']\n",
-      " [' ' 'x' ' ']\n",
-      " ['1' ' ' ' ']\n",
-      " ['1' ' ' '2']\n",
-      " ['1' 'x' '2']\n",
-      " ['1' 'x' '2']\n",
-      " ['1' 'x' '2']\n",
-      " ['1' ' ' ' ']\n",
-      " ['1' 'x' ' ']\n",
-      " ['1' ' ' '2']]\n"
+      "Täysin vaihdellut: 5\n",
+      "Osittain vaihdellut: 2\n",
+      "Järjestelmäsi:  5 X 2\n",
+      "  Arvottu rivi\n",
+      "-----------------------------------\n",
+      "1 .  \t ['1' 'x' '2']\n",
+      "2 .  \t [' ' ' ' '2']\n",
+      "3 .  \t ['1' 'x' '2']\n",
+      "4 .  \t ['1' ' ' ' ']\n",
+      "5 .  \t [' ' ' ' '2']\n",
+      "6 .  \t ['1' ' ' '2']\n",
+      "7 .  \t ['1' 'x' '2']\n",
+      "8 .  \t ['1' ' ' ' ']\n",
+      "9 .  \t ['1' ' ' ' ']\n",
+      "10 .  \t ['1' 'x' '2']\n",
+      "11 .  \t [' ' 'x' '2']\n",
+      "12 .  \t [' ' 'x' ' ']\n",
+      "13 .  \t ['1' 'x' '2']\n",
+      "-----------------------------------\n",
+      "Rivien määrä: 972\n",
+      "Lapun hinta:  1944.0  euroa\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "##### import numpy as np\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import re\n",
     "import sys\n",
     "import random\n",
-    "\n",
+    "#import matplotlib.pyplot as plt\n",
+    "import copy\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import tkinter\n",
+    "import matplotlib\n",
+    "matplotlib.use('TkAgg')\n",
+    "import matplotlib.pyplot as plt\n",
     "#get_vakio() will parse data from tekstitv site.\n",
     "def get_vakio_odds():\n",
     "    url = 'https://yle.fi/tekstitv/txt/479_0001.htm'\n",
+    "    #url = 'https://yle.fi/tekstitv/txt/479_0002.htm'\n",
     "    try:\n",
     "        response = requests.get(url)\n",
     "    except:\n",
-    "        return None\n",
+    "        print(\"No list found, Check your internet connection.\")\n",
+    "        return None, 100\n",
     "    if response.status_code == 200:\n",
     "        soup = BeautifulSoup(response.content, 'html.parser')\n",
     "        boxbox = soup.find('div', {'class': 'boxbox'})\n",
@@ -85,7 +101,8 @@
     "\n",
     "    string = str(boxbox_content)\n",
     "    pattern = r\"\\d+\\s+\\d+\\s+\\d+\"  # match three numbers with spaces between them\n",
-    "\n",
+    "    pattern2 = r'0,[0-9]{2}'\n",
+    "    matches2 = re.findall(pattern2, string)\n",
     "    matches = re.findall(pattern, string)\n",
     "\n",
     "    if matches:\n",
@@ -100,15 +117,28 @@
     "            if np.sum(new_list[i,:]!= 1.0):\n",
     "                new_list[i,2] = new_list[i,2]+ 1 - np.sum(new_list[i,:]) #round the error\n",
     "        a=0\n",
-    "  \n",
-    "    return new_list\n",
+    "      \n",
+    "    if matches2:\n",
+    "        return new_list,float(matches2[0].replace(\",\", \".\"))\n",
+    "    else:\n",
+    "        return new_list, 0\n",
     "\n",
     "def system(size):\n",
-    "    input_full = int(input(\"Täysin vaihdellut: \"))\n",
-    "    input_partial = int(input(\"Osittain vaihdellut: \"))\n",
+    "    try:\n",
+    "        input_full = int(input(\"Täysin vaihdellut: \"))\n",
+    "    except:\n",
+    "        print(\"Error with input, choosing 0\")\n",
+    "        input_full = 0\n",
+    "    try:\n",
+    "        input_partial = int(input(\"Osittain vaihdellut: \"))\n",
+    "    except:\n",
+    "        print(\"Error with input, choosing 0\")\n",
+    "        input_partial = 0\n",
+    "\n",
     "    if input_full + input_partial > size:\n",
     "        sys.exit(\"Väärä systeemi, liian monta vaihdeltua kohdetta.\")    \n",
     "    else:\n",
+    "        print(\"Järjestelmäsi: \", input_full, \"X\", input_partial)\n",
     "        return input_full,input_partial\n",
     "\n",
     "def makesheet(size):\n",
@@ -121,7 +151,8 @@
     "def sort_odds(sheet,new_list, types):\n",
     "        subtract = []\n",
     "        for i in range(size):\n",
-    "            subtract = np.append(subtract, new_list[i,0]+new_list[i,1])\n",
+    "            subtract = np.append(subtract, max(new_list[i,0]+new_list[i,1],\n",
+    "                                                  new_list[i,1]+new_list[i,2] ))\n",
     "        diff = np.abs(subtract - 0.666)\n",
     "        # Get the indices that would sort the absolute differences in ascending order\n",
     "        sorted_indices = np.argsort(diff)\n",
@@ -168,7 +199,7 @@
     "            elif mark == \"x\":\n",
     "                weights = [new_list[sorted_indices[i],0], new_list[sorted_indices[i],-1]]\n",
     "                new_mark =random.choices([\"1\",\"2\"],weights=weights)[0]\n",
-    "            elif mark == \"2\":\n",
+    "            else: # mark == \"2\":\n",
     "                new_mark =random.choices([\"1\",\"x\"],weights=new_list[sorted_indices[i],0:2])[0]\n",
     "            \n",
     "            #Set the new mark:\n",
@@ -186,7 +217,9 @@
     "    return sheet\n",
     "\n",
     "#Download the target list and odds: Check if the list is valid.\n",
-    "new_list = get_vakio_odds()\n",
+    "new_list, cost = get_vakio_odds()\n",
+    "if cost==0:\n",
+    "    cost = float(input(\"Rivihintaa ei löytynyt, määritä rivihinta käsin (esim. 0.25): \"))\n",
     "if new_list is None:\n",
     "    sys.exit(\"Riviä ei löytynyt\")\n",
     "#Size of the game (usually 12 or 13 targets)\n",
@@ -197,31 +230,252 @@
     "full,partial = system(size)\n",
     "#Make the empty gamesheet\n",
     "sheet = makesheet(size)\n",
-    "\n",
+    "#Make the system\n",
     "sheet = build_system(new_list,size,full,partial,sheet)\n",
-    "print(sheet)"
+    "\n",
+    "print(\"  Arvottu rivi\")\n",
+    "print(\"-----------------------------------\")\n",
+    "i=0\n",
+    "while i<len(sheet):\n",
+    "    print(i+1,\". \",\"\\t\", sheet[i,:])\n",
+    "    i=i+1\n",
+    "def getprize(size,full,partial):\n",
+    "    if partial == 0 and full == 0:\n",
+    "        return 1\n",
+    "    elif full == 0 and partial != 0:    \n",
+    "        return 2**partial\n",
+    "    elif partial == 0 and full != 0:\n",
+    "        return 3**full\n",
+    "    else:\n",
+    "        return (2**partial)*(3**full)   \n",
+    "print(\"-----------------------------------\")    \n",
+    "prize = round(cost*getprize(size,full,partial),2)\n",
+    "print(\"Rivien määrä:\", getprize(size,full,partial))\n",
+    "print(\"Lapun hinta: \", prize, \" euroa\")\n",
+    "\n",
+    "def check_sheet(sheet,correct_row):\n",
+    "    right=0\n",
+    "    for i in range(len(correct_row)):\n",
+    "        if correct_row[i] in sheet[i,:]:\n",
+    "            right=right+1\n",
+    "    return right\n",
+    "\n",
+    "def simulate(new_list,size,full,partial):\n",
+    "    #This is beta version.\n",
+    "    #Correct row:\n",
+    "    valinta = np.array([1,\"x\",2])\n",
+    "    correct_row = []\n",
+    "    for i in range(size):\n",
+    "        correct_row = np.append(correct_row, np.random.choice(valinta,p=new_list[i,:]))\n",
+    "    labels = []\n",
+    "    exit= False\n",
+    "    #Simuloi lappuja, vaikkapa 1000:\n",
+    "    i=0\n",
+    "    correct = []\n",
+    "    correct3 = []\n",
+    "    length=100\n",
+    "    results = np.zeros(length)\n",
+    "    results3 = np.zeros(length)\n",
+    "    two=0\n",
+    "    three=0\n",
+    "    result = np.zeros(length)\n",
+    "    correct_o = []\n",
+    "    result_own = np.zeros(length)\n",
+    "    '''\n",
+    "    Currently not in use. In the future there will be a subroutine that counts the gradient between each system.\n",
+    "    It will then decide which system provides the best profit vs.prize.\n",
+    "    while two < 14:\n",
+    "        while three < 14:\n",
+    "            labels = np.append(labels, str(three)+\"X\"+str(two))\n",
+    "            while i<length:\n",
+    "                if two+three == 13:\n",
+    "                    two = two + 1\n",
+    "                    if two >= 13:\n",
+    "                        print(\"täällä\")\n",
+    "                        exit = True\n",
+    "                    three = 0\n",
+    "                if exit:\n",
+    "                    break\n",
+    "                \n",
+    "                sheet = makesheet(size)\n",
+    "                sheet = build_system(new_list,size,three,two,sheet)\n",
+    "                correct = np.append(correct, check_sheet(sheet,correct_row))\n",
+    "                i=i+1\n",
+    "            i=0\n",
+    "            if exit:\n",
+    "                break\n",
+    "            result = np.vstack((result,copy.deepcopy(correct)))\n",
+    "            correct = []\n",
+    "            three = three+1\n",
+    "        two = two +1\n",
+    "        three = 0\n",
+    "        if exit:\n",
+    "            break\n",
+    "\n",
+    "    result = np.delete(result,0,0)\n",
+    "    print(labels)\n",
+    "    n_arrays = len(result/length)\n",
+    "    \n",
+    "    sliced_arrays = np.array_split(result, n_arrays)\n",
+    "    sliced_arrays = np.array(sliced_arrays)\n",
+    "    #for i, slice_arr in enumerate(sliced_arrays):\n",
+    "        #print(f\"Slice {i+1}: {slice_arr}\")\n",
+    "    #print(np.shape(sliced_arrays))\n",
+    "    #print(sliced_arrays[0,:,:])\n",
+    "    sliced_arrays = np.transpose(sliced_arrays,(2, 1, 0))\n",
+    "    a=0\n",
+    "    #for i in range(n_arrays):\n",
+    "    i=0\n",
+    "    j=0\n",
+    "    while i<n_arrays:\n",
+    "        df = pd.DataFrame(sliced_arrays[:,0,i:i+13-a])  \n",
+    "        i = i+13-a\n",
+    "        a=a+1\n",
+    "        summary = df.describe()\n",
+    "        print(\"suma\", summary)\n",
+    "        means = summary.loc['mean'].values\n",
+    "        std = summary.loc['std'].values\n",
+    "        plt.plot(means, label = labels[j])\n",
+    "        print(\"STATUS; \", i)\n",
+    "        j=j+1        \n",
+    "                \n",
+    "    #for i in range(1):\n",
+    "    #    print(i, n_arrays)\n",
+    "        #(91, 1, 100)\n",
+    "        #print(type(sliced_arrays))\n",
+    "        #reshaped_arr = sliced_arrays.reshape(91, 100)\n",
+    "        #df = pd.DataFrame(reshaped_arr)\n",
+    "        #df = pd.DataFrame(sliced_arrays[i,:,:])\n",
+    "    #    df = pd.DataFrame(sliced_arrays[:,0,i:i+12-a])\n",
+    "    #    i = i+12-a\n",
+    "    #    a=a+1\n",
+    "    #    print(df)\n",
+    "\n",
+    "     #   summary = df.describe()\n",
+    "      #  print(\"suma\", summary)\n",
+    "       # means = summary.loc['mean'].values\n",
+    "        #std = summary.loc['std'].values\n",
+    "       # plt.plot(means, label = labels[i])\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    print(sliced_arrays[0,:,0])\n",
+    "    #result = np.transpose(result)\n",
+    "    #df = pd.DataFrame(result)\n",
+    "    #summary = df.describe()\n",
+    "    #means = summary.loc['mean'].values\n",
+    "\n",
+    "    #plt.plot(result)    \n",
+    "    '''\n",
+    "    while two < 14:\n",
+    "        while i<length:\n",
+    "            #Clear sheet\n",
+    "            sheet = makesheet(size)\n",
+    "            #Make the system\n",
+    "            sheet = build_system(new_list,size,0,two,sheet)\n",
+    "            #Check correct\n",
+    "            correct = np.append(correct, check_sheet(sheet,correct_row))\n",
+    "\n",
+    "            sheet = makesheet(size)\n",
+    "            #Make the system\n",
+    "            sheet = build_system(new_list,size,three,0,sheet)\n",
+    "            correct3 = np.append(correct3, check_sheet(sheet,correct_row))\n",
+    "            #Simulate own system:\n",
+    "            sheet = makesheet(size)\n",
+    "            sheet = build_system(new_list,size,full,partial,sheet)\n",
+    "            correct_o = np.append(correct_o, check_sheet(sheet,correct_row))\n",
+    "            \n",
+    "            i=i+1\n",
+    "               \n",
+    "        #plt.hist(correct, bins = np.arange(5,14), label = str(two), zorder = three)\n",
+    "        three=three+1\n",
+    "        two=two+1\n",
+    "        \n",
+    "        result_own = np.vstack((result_own,copy.deepcopy(correct_o)))\n",
+    "        results = np.vstack((results,copy.deepcopy(correct)))\n",
+    "        \n",
+    "        results3 = np.vstack((results3,copy.deepcopy(correct3)))\n",
+    "        correct = []\n",
+    "        correct3 = []\n",
+    "        correct_o = []\n",
+    "        i=0\n",
+    "    \n",
+    "    result_own = np.delete(result_own,0,0)\n",
+    "    results = np.delete(results,0,0)\n",
+    "    results3 = np.delete(results3,0,0)\n",
+    "\n",
+    "    result_own = np.transpose(result_own)\n",
+    "    results = np.transpose(results)\n",
+    "    results3 = np.transpose(results3)\n",
+    "    df = pd.DataFrame(results,columns=[np.arange(0,14)])\n",
+    "    df3 = pd.DataFrame(results3,columns=[np.arange(0,14)])\n",
+    "    dfo = pd.DataFrame(result_own)\n",
+    "    # Get the summary statistics\n",
+    "    summary_o = dfo.describe()\n",
+    "    summary,summary3 = df.describe(), df3.describe()\n",
+    "    summary,summary3 = summary.drop('count'),summary3.drop('count') \n",
+    "    summary,summary3 = summary.round(2),summary3.round(2)\n",
+    "    \n",
+    "\n",
+    "    means, means3,mean_o = summary.loc['mean'].values,summary3.loc['mean'].values, summary_o.loc['mean'].values\n",
+    "    mean_o = np.mean(mean_o)\n",
+    "    std, std3, std_o = summary.loc['std'].values,summary3.loc['std'].values,summary_o.loc['std'].values\n",
+    "    std_o = np.mean(std_o)\n",
+    "    \n",
+    "    #plt.legend()\n",
+    "    #plt.show()\n",
+    "    # Plot the means\n",
+    "    plt.plot(means, zorder=5, color=\"blue\", label=\"Osittain vaihdeltu\")\n",
+    "    plt.plot(means3, zorder=5, color=\"green\", label=\"Täysin vaihdeltu\")\n",
+    "    # Add labels and title to the plot\n",
+    "\n",
+    "    plt.title('Järjestelmien odotusarvot 95% virheineen')\n",
+    "    x = np.arange(0,14)\n",
+    "    plt.xticks(x,np.arange(0,14))\n",
+    "    plt.fill_between(np.arange(0,len(means)), means+2*std,means-2*std, color=\"lightblue\", alpha=0.3,zorder=2)\n",
+    "    plt.fill_between(np.arange(0,len(means3)), means3+2*std3,means3-2*std3, color=\"lightgreen\", alpha=0.3,zorder=2)\n",
+    "    plt.fill_between([0,0],[0,0],[0,0], color = \"grey\", label = \"95% luottamusväli\")\n",
+    "    \n",
+    "    plt.xlabel(\"Systeemin koko\")\n",
+    "    plt.ylabel(\"Oikeita tuloksia\")\n",
+    "    \n",
+    "    plt.ylim(4,13.5)\n",
+    "\n",
+    "    plt.errorbar([np.sum([full,partial])], [mean_o], yerr = [2*std_o], fmt = \"o\", \n",
+    "            ecolor = 'red', elinewidth = 0.5, capsize=5, label=\"Sinun järjestelmäsi: \"+str(full)+\"x\"+str(partial))\n",
+    "    plt.yticks([4,5,6,7,8,9,10,11,12,13],[4,5,6,7,8,9,10,11,12,13])\n",
+    "    plt.axhline(y=13, color='red', linestyle='--')\n",
+    "    plt.legend()\n",
+    "    \n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "    \n",
+    "    #Huom. Tee simulaatio vielä pelaajan valitsemalla x+x systeemillä!\n",
+    "    \n",
+    "simulate(new_list,size,full,partial)\n",
+    "\n",
+    "# simulaatio?\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Simuloi oikeita tuloksia, etsi paras lappu, jolla paras tulos.\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Tee statistiikka kuinka monta oikeaa riviä, systeemeillä \n",
+    "# Make new sheet -> Make new system, check the right results.\n",
+    "\n",
+    "#UNCOMMENT TO PLOT 2x0,1,2...13 visible.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "1d442796",
+   "execution_count": null,
+   "id": "fae97e6f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.51 0.27]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "print(new_list[3,0:-1])\n",
-    "\n",
-    "#print(random_character)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
