--- a/Vakiorivi-free.ipynb
+++ b/Vakiorivi-free.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "59705ea2",
    "metadata": {},
    "outputs": [
@@ -12,55 +12,75 @@
      "text": [
       "\n",
       "\n",
-      "            Vakio 1 KRS 21         1/6\n",
-      " POTTI: n. 130 000 e.\n",
+      "        Lauantaivakio 1 KRS 22     1/5\n",
+      " POTTI: n. 110 000 e.\n",
       " \n",
-      " Pelijakauma 18.28, vaihto 396843 e\n",
+      " Pelijakauma 16.45, vaihto 104520 e\n",
       "                                 1  X  2\n",
-      " 1. Brentford   - Man City    M 24 23 54\n",
-      " 2. Arsenal     - Wolves      M 79 13  8\n",
-      " 3. Chelsea     - Newcastle   M 28 27 45\n",
+      " 1. HJK         - SJK         M 50 27 23\n",
+      " 2. KuPS        - FC Haka     M 77 14  9\n",
+      " 3. AC Oulu     - IFK Mhamn   M 62 23 16\n",
       " ---------------------------------------\n",
-      " 4. Man Utd     - Fulham      M 77 14  9\n",
-      " 5. Southampt   - Liverpool   M 11 14 76\n",
-      " 6. Aston V     - Brighton    M 50 26 24\n",
+      " 4. KTP         - VPS         M 46 29 25\n",
+      " 5. Ilves       - FC Lahti    M 63 23 14\n",
+      " 6. Man City    - Man Utd     M 58 23 19\n",
       " ---------------------------------------\n",
-      " 7. Leeds U     - Tottenham   M 36 22 42\n",
-      " 8. Crystal P   - Nottingha     63 22 15\n",
-      " 9. Everton     - Bournem.      66 19 15\n",
+      " 7. RBLeipzig   - Frankfurt   M 60 23 17\n",
+      " 8. Nice        - Lyon          32 31 37\n",
+      " 9. Nantes      - Angers        72 16 12\n",
       " ---------------------------------------\n",
-      "10. Leicester   - West Ham      53 21 26\n",
-      "11. Rayo        - Villarrea     23 24 53\n",
-      "12. Getafe      - Osasuna       49 28 24\n",
-      "13. Girona      - Betis         46 29 26\n",
-      " \n",
-      "             KOHDE SULJETTU\n",
+      "10. Monaco      - Toulouse      73 15 11\n",
+      "11. Auxerre     - Lens          30 27 43\n",
+      "12. Troyes      - Lille         15 16 69\n",
+      "13. Brest       - Rennes        27 26 47\n",
+      " Pelaaminen päättyy la 03.06. klo 16.58\n",
+      " Pelinumero 1. Rivihinta 0,25 e\n",
       " \n",
       "\n",
       "\n",
-      "Rivihintaa ei löytynyt, määritä rivihinta käsin (esim. 0.25): 2\n",
       "Vakion kohdemäärä 13\n",
-      "Täysin vaihdellut: 5\n",
-      "Osittain vaihdellut: 2\n",
-      "Järjestelmäsi:  5 X 2\n",
+      "Täysin vaihdellut: 4\n",
+      "Osittain vaihdellut: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "||||                                                 |  7%Elapsed Time: 0:00:00"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Järjestelmäsi:  4 X 0\n",
       "  Arvottu rivi\n",
       "-----------------------------------\n",
-      "1 .  \t ['1' 'x' '2']\n",
-      "2 .  \t [' ' ' ' '2']\n",
-      "3 .  \t ['1' 'x' '2']\n",
-      "4 .  \t ['1' ' ' ' ']\n",
-      "5 .  \t [' ' ' ' '2']\n",
-      "6 .  \t ['1' ' ' '2']\n",
-      "7 .  \t ['1' 'x' '2']\n",
-      "8 .  \t ['1' ' ' ' ']\n",
+      "1 .  \t [' ' 'x' ' ']\n",
+      "2 .  \t ['1' ' ' ' ']\n",
+      "3 .  \t ['1' ' ' ' ']\n",
+      "4 .  \t ['1' 'x' '2']\n",
+      "5 .  \t ['1' ' ' ' ']\n",
+      "6 .  \t [' ' 'x' ' ']\n",
+      "7 .  \t [' ' ' ' '2']\n",
+      "8 .  \t ['1' 'x' '2']\n",
       "9 .  \t ['1' ' ' ' ']\n",
-      "10 .  \t ['1' 'x' '2']\n",
-      "11 .  \t [' ' 'x' '2']\n",
-      "12 .  \t [' ' 'x' ' ']\n",
+      "10 .  \t ['1' ' ' ' ']\n",
+      "11 .  \t ['1' 'x' '2']\n",
+      "12 .  \t [' ' ' ' '2']\n",
       "13 .  \t ['1' 'x' '2']\n",
       "-----------------------------------\n",
-      "Rivien määrä: 972\n",
-      "Lapun hinta:  1944.0  euroa\n"
+      "Rivien määrä: 81\n",
+      "Lapun hinta:  20.25  euroa\n",
+      "Odota hetki, simulaatio käynnissä...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "||||||||||||||||||||||||||||||||||||||||||||||||||||||100%Elapsed Time: 0:00:28\n"
      ]
     }
    ],
@@ -79,6 +99,15 @@
     "import matplotlib\n",
     "matplotlib.use('TkAgg')\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "# Simulating a long-running task\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "#get_vakio() will parse data from tekstitv site.\n",
     "def get_vakio_odds():\n",
     "    url = 'https://yle.fi/tekstitv/txt/479_0001.htm'\n",
@@ -261,6 +290,8 @@
     "    return right\n",
     "\n",
     "def simulate(new_list,size,full,partial):\n",
+    "    import time\n",
+    "    import progressbar\n",
     "    #This is beta version.\n",
     "    #Correct row:\n",
     "    valinta = np.array([1,\"x\",2])\n",
@@ -273,7 +304,7 @@
     "    i=0\n",
     "    correct = []\n",
     "    correct3 = []\n",
-    "    length=100\n",
+    "    length=1000\n",
     "    results = np.zeros(length)\n",
     "    results3 = np.zeros(length)\n",
     "    two=0\n",
@@ -367,8 +398,15 @@
     "\n",
     "    #plt.plot(result)    \n",
     "    '''\n",
+    "    print(\"Odota hetki, simulaatio käynnissä...\")\n",
+    "    widgets = [progressbar.Bar(\"|\"), '', progressbar.Percentage(), '', progressbar.Timer()]\n",
+    "    progress = progressbar.ProgressBar(max_value=14, widgets=widgets).start()\n",
     "    while two < 14:\n",
+    "        time.sleep(0.1)  # Simulating some work\n",
+    "        progress.update(two+1)\n",
     "        while i<length:\n",
+    "\n",
+    "            # Call the function\n",
     "            #Clear sheet\n",
     "            sheet = makesheet(size)\n",
     "            #Make the system\n",
@@ -399,7 +437,9 @@
     "        correct3 = []\n",
     "        correct_o = []\n",
     "        i=0\n",
-    "    \n",
+    "\n",
+    "    progress.finish()\n",
+    "\n",
     "    result_own = np.delete(result_own,0,0)\n",
     "    results = np.delete(results,0,0)\n",
     "    results3 = np.delete(results3,0,0)\n",
